server/compilers/goLiteJS/src/test/ml1/valid/exp3.go
// primitive binary operations as expressions
package main

func main() {
    _ = exp||exp
    _ = exp&&exp
    _ = exp==exp
    _ = exp!=exp
    _ = exp<exp
    _ = exp<=exp
    _ = exp>exp
    _ = exp>=exp
    _ = exp+exp
    _ = exp-exp
    _ = exp|exp
    _ = exp^exp
    _ = exp*exp
    _ = exp/exp
    _ = exp%exp
    _ = exp<<exp
    _ = exp>>exp
    _ = exp&exp
    _ = exp&^exp
    _ = (exp)
}
