server/compilers/goLiteJS/src/test/ml1/invalid/dec1.go
// prefix dec
package main

func main() {
    --x
}
